--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 #first-view {
     width: 100%;
     position: relative;
-    background: red;
+    background:blue;
 
 }
 
@@ -70,8 +70,35 @@ nav a:hover {
     transition: 0.8s;
 }
 
+.rightimg-slider {
+    width: 70%;
+    height: 100vh;
+    background: green;
+    position: absolute;
+    top:0;
+    right:-30%;
+/*    left: 450px;*/
+}
 
-.main-right {
+
+.rightimg-slider img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+
+
+.leftimg{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    left: 0;
+    top: 0;
+    
+}
+
+.leftimg img {
     width: 100%;
     height: 100vh;
     background-size: cover;
@@ -95,21 +122,6 @@ nav a:hover {
     color: #D1322A;
 }
 
-.slider img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-.slider {
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: green;
-
-}
 
 
 
@@ -234,6 +246,19 @@ nav a:hover {
     line-height: 170px;
     margin-top: -30px;
 }
+
+
+/*
+.fadein{
+    width: 80%;
+    height: 200px;
+    background: red;
+    text-align: center;
+    margin-left: -900px;
+}
+*/
+
+
 
 
 /*aboutus-sectionのレスポンシブ*/
