--- a/css/style.css
+++ b/css/style.css
@@ -397,7 +397,7 @@ body.fixed {
     
 }
 
-.modal__content_yuna{
+.modal_whitebox{
     width: 84%;
     height: 76%;
     background:#EFF1F5;
@@ -406,29 +406,53 @@ body.fixed {
  
 }
 
-.modal__content_yuna img{
-    width: 31%;
+.modal_whitebox img{
+    width: 34%;
     margin-left: 4%;
     margin-top: 1%;
 }
 
-.yunashadow{
-    background:rgb(255,0,0,0.3);
-  
-}
 
 .modal_flexbox{
     width: 90%;
+    padding-top: 40px;
     overflow: hidden;
-    background: green;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    font-family: sans-serif;   
 }
 
-.modal_text{
-    width: 50%;
+.modal_textbox{
+    width: 55%;
+    overflow: hidden;
+    padding-top: 80px; 
 }
+
+.modal_textbox h3{
+    color: #001E62;
+    font-size: 30px;  
+}
+
+.modal_textbox h3 span{
+    font-size: 18px;
+}
+
+.modal_textbox p{
+    color: #001E62;
+    margin-top: 3%;
+}
+
+.js-modal-close img{
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+
+
 
 
 
