aboutus-sectionだけレスポンシブ化

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@
     font-family: "游ゴシック体", YuGothic;
 }
 
+
 #first-view {
     width: 100%;
     position: relative;
-    background:blue;
+    background: blue;
 
 }
 
@@ -73,11 +74,10 @@ nav a:hover {
 .rightimg-slider {
     width: 70%;
     height: 100vh;
-    background: green;
     position: absolute;
-    top:0;
-    right:-30%;
-/*    left: 450px;*/
+    top: 0;
+    right: -30%;
+    /*    left: 450px;*/
 }
 
 
@@ -89,13 +89,13 @@ nav a:hover {
 
 
 
-.leftimg{
+.leftimg {
     width: 100%;
     height: 100vh;
     position: absolute;
     left: 0;
     top: 0;
-    
+
 }
 
 .leftimg img {
@@ -124,6 +124,16 @@ nav a:hover {
 
 
 
+/*ここからfirst-viewのレスポンシブ*/
+@media screen and (max-width:480px) {
+    nav {
+        display: none;
+    }
+}
+
+
+
+
 
 /*ここからaboutus-section*/
 
@@ -133,7 +143,7 @@ nav a:hover {
     margin-top: -5px;
     position: relative;
     /*    background: pink;*/
-     text-shadow: 0 5px 5px rgba(0, 0, 0, .5);
+    text-shadow: 0 5px 5px rgba(0, 0, 0, .5);
 
 }
 
@@ -160,9 +170,9 @@ nav a:hover {
 }
 
 
-.aboutus {
+.aboutus-box {
     width: 35%;
-    height: 100vh;
+    height: 90vh;
     background: #001B66;
     margin: 0 auto;
     padding-top: 45px;
@@ -231,7 +241,7 @@ nav a:hover {
     padding: 10px;
     z-index: 3;
     box-shadow: 0 0 15px rgba(0, 0, 0, .6);
-    
+
 }
 
 .katsudou-button:hover {
@@ -262,8 +272,72 @@ nav a:hover {
 
 
 /*aboutus-sectionのレスポンシブ*/
-@media screen and (max-width:480px){
+@media screen and (max-width:480px) {
     
+    .enjin-image {
+    width: 28%;
+    height: 450px;
+    margin-top: 60px;
+}
+    
+    .hug-image {
+         width: 30%;
+    height: 450px;
+    margin-top: 60px;
+   
+    right: -60px;
+   
+}
+    .aboutus-box {
+        width: 72%;
+        height: 540px;
+        padding-top: 25px;
+    
+
+    }
+
+    .aboutus-notalone {
+        width: 84%;
+        margin-top: 20px;
+        padding-left: 10%;
+
+    }
+
+    .aboutus-notalone h3 {
+        font-size: 30px;
+        line-height: 40px;
+        letter-spacing: 2px;
+
+    }
+
+    .aboutus-notalone span {
+        font-size: 45px
+    }
+
+    .aboutus-text {
+        font-size: 14px;
+        width: 84%;
+        line-height: 22px;
+        margin-top: 25px;
+    }
+
+    .katsudou-button {
+        width: 170px;
+        font-size: 18px;
+        padding: 8px;
+        margin-top: 25px;
+    }
+    
+    .about-class h5 {
+    font-size: 70px;
+    line-height: 100px;
+ 
+}
+
+
+
+
+
 }
 
 
@@ -271,7 +345,7 @@ nav a:hover {
 
 #interview-section {
     width: 100%;
-    /*    overflow: hidden;    */
+    overflow: hidden;
     /*    background: pink;*/
     margin-top: 130px;
 }
@@ -319,6 +393,12 @@ nav a:hover {
     padding: 0 15px;
     margin-top: -75px;
     z-index: 2;
+    transition-duration: 0.3s;
+}
+
+.member-photo img:hover {
+    transform: scale(1.2, 1.2);
+
 }
 
 .yuna {
@@ -331,6 +411,8 @@ nav a:hover {
     opacity: 0.6;
     line-height: 170px;
     margin-top: -28px;
+    margin-left: 400px;
+    /*    position: absolute;*/
     position: relative;
     z-index: -2;
 
@@ -346,7 +428,7 @@ body.fixed {
 }
 */
 
-.modal{
+.modal {
     display: none;
     height: 100vh;
     position: fixed;
@@ -354,96 +436,98 @@ body.fixed {
     width: 100%;
     z-index: 7;
 }
-.modal__bg{
-    background: rgba(0,0,0,0.8);
+
+.modal__bg {
+    background: rgba(0, 0, 0, 0.8);
     height: 100vh;
     position: absolute;
     width: 100%;
 }
-.modal_bluebox{
+
+.modal_bluebox {
     background: #fff;
     background-image: url(../image/modal-back-20.png);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
     left: 50%;
-/*    padding: 40px;*/
+    /*    padding: 40px;*/
     position: absolute;
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     width: 75%;
     height: 75vh;
 
 }
 
-.modal-interview-title{
-/*    background: green;*/
+.modal-interview-title {
+    /*    background: green;*/
     width: 30%;
     float: left;
     margin-top: 1%;
     margin-left: 1.5%;
 }
 
-.modal-interview-title h2{
+.modal-interview-title h2 {
     color: #D1322A;
     font-size: 40px;
     line-height: 38px;
 }
 
 
-.modal-interview-title p{
+.modal-interview-title p {
     color: white;
     font-family: sans-serif;
-    
+
 }
 
-.modal_whitebox{
+.modal_whitebox {
     width: 84%;
     height: 76%;
-    background:#EFF1F5;
+    background: #EFF1F5;
     margin: 0 auto;
     margin-top: 7%;
- 
+
 }
 
-.modal_whitebox img{
+.modal_whitebox img {
     width: 34%;
     margin-left: 4%;
     margin-top: 1%;
 }
 
 
-.modal_flexbox{
+.modal_flexbox {
     width: 90%;
     padding-top: 40px;
     overflow: hidden;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    font-family: sans-serif;   
+    font-family: sans-serif;
 }
 
-.modal_textbox{
+.modal_textbox {
     width: 55%;
     overflow: hidden;
-    padding-top: 80px; 
+    padding-top: 80px;
 }
 
-.modal_textbox h3{
+.modal_textbox h3 {
     color: #001E62;
-    font-size: 30px;  
+    font-size: 30px;
 }
 
-.modal_textbox h3 span{
+.modal_textbox h3 span {
     font-size: 18px;
 }
 
-.modal_textbox p{
+.modal_textbox p {
     color: #001E62;
     margin-top: 3%;
 }
 
-.js-modal-close img{
+.js-modal-close img {
     width: 50px;
     height: 50px;
     position: absolute;
@@ -476,7 +560,7 @@ body.fixed {
 }
 
 .freshmen-container {
-    width: 85%;
+    width: 80%;
     height: 730px;
     background-image: url("../image/forfreshmen.jpg");
     background-position: center center;
@@ -542,15 +626,15 @@ body.fixed {
     text-decoration: none;
     font-size: 27px;
     display: inline-block;
-    width: 380px;
+    width: 340px;
     line-height: 75px;
     background: white;
     text-align: center;
     font-family: sans-serif;
     position: absolute;
     top: 568px;
-    right: 7%;
-    z-index: 2;
+    right: 5%;
+    /*        z-index: 2;*/
 }
 
 .register-button:hover {
@@ -593,7 +677,7 @@ body.fixed {
     opacity: 0.6;
     line-height: 170px;
     position: relative;
-    z-index: 1;
+    z-index: 0;
 }
 
 /*
@@ -696,6 +780,3 @@ footer p {
 
 
 }
-
-
-
